--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,6 +17,42 @@ jobs:
 
     - name: Build with dotnet
       run: dotnet build ./eShopOnWeb.sln --configuration Release
-    
+
+      # See https://josh-ops.com/posts/github-code-coverage/
+      # Add coverlet.collector nuget package to test project - 'dotnet add <TestProject.cspoj> package coverlet
     - name: Test with dotnet
-      run: dotnet test ./eShopOnWeb.sln --configuration Release
+      run: dotnet test ./eShopOnWeb.sln --no-restore --verbosity normal --collect:"XPlat Code Coverage" --logger trx --results-directory coverage
+      
+    - name: Copy Coverage To Predictable Location
+      run: find coverage -type f -name coverage.cobertura.xml -exec cp -p {} coverage/coverage.cobertura.xml \;
+      
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: coverage/coverage.cobertura.xml
+        badge: true
+        format: 'markdown'
+        output: 'both'
+
+    - name: Upload code coverage results artifact
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: code-coverage-results
+        path: code-coverage-results.md
+        retention-days: 1
+    
+    - name: Save the PR number in an artifact
+      if: github.event_name == 'pull_request' && (success() || failure()) 
+      shell: bash
+      env:
+        PR_NUMBER: ${{ github.event.number }}
+      run: echo $PR_NUMBER > pr-number.txt
+  
+    - name: Upload the PR number
+      uses: actions/upload-artifact@v4
+      if: github.event_name == 'pull_request' &&  (success() || failure())
+      with:
+        name: pr-number
+        path: ./pr-number.txt
+        retention-days: 1
