- WebBase is removed.

--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:44315/"
+    "apiBase": "https://localhost:5099/api/"
   },
   "Logging": {
     "LogLevel": {
