--- a/src/Web/appsettings.Docker.json
+++ b/src/Web/appsettings.Docker.json
@@ -4,8 +4,7 @@
     "IdentityConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;User Id=sa;Password=@someThingComplicated1234;Trusted_Connection=false;TrustServerCertificate=true;"
   },
   "baseUrls": {
-    "apiBase": "http://localhost:5200/api/",
-    "webBase": "http://host.docker.internal:5106/"
+    "apiBase": "http://localhost:5200/api/"
   },
   "Logging": {
     "LogLevel": {
