--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:44315/"
+    "apiBase": "https://localhost:5099/api/"
   },
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
