- Rename the Aspire add service function.

--- a/src/eShopWeb.AspireServiceDefaults/eShopWeb.AspireServiceDefaults.csproj
+++ b/src/eShopWeb.AspireServiceDefaults/eShopWeb.AspireServiceDefaults.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
   </ItemGroup>
 
 </Project>
