Adding the components for OAuth

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.ListStartupServices" />
     <PackageReference Include="Ardalis.Specification" />
+    <PackageReference Include="AspNetCore.Security.OAuth.Extensions" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" />
     <PackageReference Include="Azure.Identity" />
