--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -8,5 +8,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Aspire": {
+    "Seq": {
+      "DisableHealthChecks": true,
+      "ServerUrl": "http://localhost:5341"
+    }
   }
+
 }
