--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -3,8 +3,8 @@
     "apiBase": "https://localhost:5099/api/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "CatalogConnection": "Server=(localdb)\\ProjectModels;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "IdentityConnection": "Server=(localdb)\\ProjectModels;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
