Role Membership management - viewing and deleting; adding will be in User management

--- a/src/BlazorAdmin/BlazorAdmin.csproj
+++ b/src/BlazorAdmin/BlazorAdmin.csproj
@@ -29,4 +29,10 @@
 		</Compile>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="Pages\RolePage\DeleteUserFromRole.razor">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	  </Content>
+	</ItemGroup>
+
 </Project>
