fix SQL error via `UseOnlyInMemoryDatabase` change base url for test , i will update url via terraform .

--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -1,20 +1,21 @@
 {
-  "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:5001/"
-  },
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
-  },
-  "CatalogBaseUrl": "",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "System": "Warning"
+    "baseUrls": {
+        "apiBase": "https://publicapi20250406100719-e7f7dkbcckh0dbg8.canadacentral-01.azurewebsites.net/api/",
+        "webBase": "https://web20250406094648-fcfadyazamb8dxe0.canadacentral-01.azurewebsites.net/"
     },
-    "AllowedHosts": "*"
-  }
+    //"ConnectionStrings": {
+    //  "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    //  "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    //},
+    "UseOnlyInMemoryDatabase": true,
+    "CatalogBaseUrl": "",
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning",
+            "Microsoft": "Warning",
+            "System": "Warning"
+        },
+        "AllowedHosts": "*"
+    }
 }
