--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,19 +1,20 @@
 ﻿{
-  "baseUrls": {
-    "apiBase": "https://localhost:5099/api/"
-  },
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
-  },
-  "CatalogBaseUrl": "",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "System": "Warning"
+    "baseUrls": {
+        "apiBase": "https://publicapi20250406100719-e7f7dkbcckh0dbg8.canadacentral-01.azurewebsites.net/api/"
     },
-    "AllowedHosts": "*"
-  }
+    //"ConnectionStrings": {
+    //  "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    //  "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    //},
+    "UseOnlyInMemoryDatabase": true,
+    "CatalogBaseUrl": "",
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning",
+            "Microsoft": "Warning",
+            "System": "Warning"
+        },
+        "AllowedHosts": "*"
+    }
 }
