Terraform code added for infrastructure , dynamic appsetting.json created

--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -1,12 +1,8 @@
 {
     "baseUrls": {
-        "apiBase": "https://publicapi20250406100719-e7f7dkbcckh0dbg8.canadacentral-01.azurewebsites.net/api/",
-        "webBase": "https://web20250406094648-fcfadyazamb8dxe0.canadacentral-01.azurewebsites.net/"
+        "apiBase": "https://az204aspapinorth2025dev.azurewebsites.net/api/",
+        "webBase": "https://az2042025dev.trafficmanager.net/"
     },
-    //"ConnectionStrings": {
-    //  "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    //  "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
-    //},
     "UseOnlyInMemoryDatabase": true,
     "CatalogBaseUrl": "",
     "Logging": {
