--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -7,9 +7,9 @@
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
-            "Default": "Warning",
-            "Microsoft": "Warning",
-            "System": "Warning"
+            "Default": "Information",
+            "Microsoft": "Information",
+            "System": "Information"
         },
         "AllowedHosts": "*"
     }
