--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,8 @@ pub/
 .terraform
 .terraform.lock*
 .terraform*.*
+terraform.tfstate
+terraform.tfstate.backup
+*.tfstate
+*.tfstate.backup
+*.tfstate.*
