--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -8,7 +8,7 @@
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
-            "Default": "Information",
+            "Default": "Warning",
             "Microsoft": "Warning",
             "System": "Warning"
         },
