--- a/src/OrderItemsReserver/OrderItemsReserver.csproj
+++ b/src/OrderItemsReserver/OrderItemsReserver.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Azure.Storage.Blobs" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" />
@@ -26,6 +27,9 @@
     <PackageVersion Include="Microsoft.Azure.Functions.Worker" Version="1.11.0" />
     <PackageVersion Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.11.0" />
     <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="1.11.0" />
+    <!--<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" />  -->
+    <PackageVersion Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
+    
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
