--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -2,7 +2,10 @@
     "baseUrls": {
         "apiBase": "https://az204aspapinorth2025dev.azurewebsites.net/api/"
     },
-    "UseOnlyInMemoryDatabase": true,
+    "ConnectionStrings": {
+      "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+      "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    },
     "CatalogBaseUrl": "",
     "Logging": {
         "IncludeScopes": false,
